--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
   ],
   "author": "Hill <hill@kimo.com>",
   "license": "MIT",
+  "dependencies": {
+      "flux": "^2.1.1",
+      "immutable": "^3.7.4",
+      "react-atomic-molecule": "*",
+      "react-atomic-organism": "*",
+      "react-organism-ajax": "*",
+      "pmvc_react_list": "*"
+  },
   "devDependencies": {
-    "react": "^0.14.3",
-    "react-dom": "^0.14.0",
-    "flux": "^2.1.1",
-    "immutable": "^3.7.4",
-    "webpack": "^1.12.2",
-    "babel-core": "^5.x",
-    "babel-loader": "^5.x"
+      "react": "^0.14.3",
+      "react-dom": "^0.14.3",
+      "webpack": "^1.12.2",
+      "babel-core": "^5.x",
+      "babel-loader": "^5.x"
   }
 }
