--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pmvc_react_admin",
   "version": "0.1.0",
   "description": "pmvc admin theme",
-  "main": "./src/index.js",
+  "main": "./build/src/index.js",
   "repository": "pmvc-theme/pmvc_react_admin",
   "keywords": [
     "react",
@@ -11,17 +11,34 @@
   "author": "Hill <hill@kimo.com>",
   "license": "MIT",
   "dependencies": {
-      "flux": "^2.1.1",
-      "immutable": "^3.7.4",
       "react-atomic-molecule": "*",
       "react-atomic-organism": "*",
-      "react-organism-ajax": "*",
-      "pmvc_react_list": "*"
+      "pmvc_react_list": "^0.0.3",
+      "reshow": "*",
+      "organism-react-popup": "*"
   },
   "devDependencies": {
-      "react": "^15.0.1",
-      "react-dom": "^15.0.1",
-      "babel-core": "^5.x",
-      "babel-loader": "^5.x"
-  }
+    "babel-cli": "^6.7.5",
+    "babel-core": "^6.7.5",
+    "babel-plugin-add-module-exports": "^0.1.2",
+    "babel-plugin-transform-react-inline-elements": "^6.8.0",
+    "babel-plugin-transform-react-constant-elements": "^6.9.1",
+    "babel-plugin-transform-object-assign": "^6.8.0",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-loader": "^6.2.5",
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1",
+    "webpack": "^1.13.0"
+  },
+  "scripts": {
+    "build": "rm -rf build && BABEL_ENV=build babel ui -d build/ui && BABEL_ENV=build babel src -d build/src",
+    "prepublish": "npm run build"
+  },
+  "files": [
+    "build",
+    "package.json",
+    "README.md"
+  ]
 }
