--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pmvc_react_admin",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "pmvc admin theme",
   "main": "./build/src/index.js",
   "repository": "pmvc-theme/pmvc_react_admin",
@@ -11,33 +11,35 @@
   "author": "Hill <hill@kimo.com>",
   "license": "MIT",
   "dependencies": {
-      "react-atomic-molecule": "*",
-      "react-atomic-organism": "*",
-      "pmvc_react_list": "^0.0.5",
-      "reshow": "*",
-      "organism-react-popup": "*"
+    "organism-react-popup": "*",
+    "pmvc_react_list": ">=0.0.5",
+    "react-atomic-molecule": ">=0.0.41",
+    "react-atomic-organism": "*",
+    "reshow": ">=0.0.24"
   },
   "devDependencies": {
     "babel-cli": "^6.7.5",
     "babel-core": "^6.7.5",
+    "babel-loader": "^6.2.5",
     "babel-plugin-add-module-exports": "^0.1.2",
-    "babel-plugin-transform-react-inline-elements": "^6.8.0",
-    "babel-plugin-transform-react-constant-elements": "^6.9.1",
     "babel-plugin-transform-object-assign": "^6.8.0",
+    "babel-plugin-transform-react-constant-elements": "^6.9.1",
+    "babel-plugin-transform-react-inline-elements": "^6.8.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
-    "babel-loader": "^6.2.5",
-    "react": "^15.0.1",
-    "react-dom": "^15.0.1",
+    "react": "^15.3.2",
+    "react-addons-shallow-compare": "^15.3.2",
+    "react-dom": "^15.3.2",
     "webpack": "^1.13.0"
   },
   "scripts": {
-    "build": "rm -rf build && BABEL_ENV=build babel ui -d build/ui && BABEL_ENV=build babel src -d build/src",
+    "build": "./compile.sh build",
     "prepublish": "npm run build"
   },
   "files": [
     "build",
+    "list.js",
     "package.json",
     "README.md"
   ]
