fixed admin skin

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pmvc_react_admin",
-  "version": "0.1.32",
+  "version": "0.1.33",
   "description": "pmvc admin theme",
   "main": "./build/src/index.js",
   "repository": "pmvc-theme/pmvc_react_admin",
@@ -13,6 +13,7 @@
   "dependencies": {
     "organism-react-navigation": "*",
     "organism-react-popup": "*",
+    "pmvc_react_list": "*",
     "react-atomic-molecule": "*",
     "react-atomic-organism": "*",
     "reshow": "*"
