--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "pmvc_react_admin",
-  "version": "0.1.52",
+  "version": "0.1.53",
   "description": "pmvc admin theme",
-  "main": "./build/src/index.js",
+  "main": "./build/cjs/src/index.js",
+  "module": "./build/es/src/index.js",
   "repository": "pmvc-theme/pmvc_react_admin",
   "keywords": [
     "react",
@@ -23,7 +24,16 @@
     "reshow-app": "*"
   },
   "scripts": {
-    "build": "./compile.sh build",
+    "webpack": "webpack",
+    "start": "ws",
+    "clean": "find ./build ./assets -name '*.*' | xargs rm -rf",
+    "build:cjs": "npm run build:cjs:src && npm run build:cjs:ui",
+    "build:cjs:src": "BABEL_ENV=cjs babel src -d build/cjs/src",
+    "build:cjs:ui": "BABEL_ENV=cjs babel ui -d build/cjs/ui",
+    "build:es": "npm run build:es:src && npm run build:es:ui",
+    "build:es:src": "BABEL_ENV=es babel src -d build/es/src",
+    "build:es:ui": "BABEL_ENV=es babel ui -d build/es/ui",
+    "build": "npm run clean && npm run build:cjs && npm run build:es",
     "prepublish": "npm run build"
   },
   "files": [
