--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "pmvc_react_admin",
-  "version": "0.2.9",
+  "version": "0.3.1",
   "description": "pmvc admin theme",
   "main": "./build/cjs/src/index.js",
   "module": "./build/es/src/index.js",
   "repository": "pmvc-theme/pmvc_react_admin",
-  "keywords": ["react", "reactjs"],
+  "keywords": [
+    "react",
+    "reactjs"
+  ],
   "author": "Hill <hill@kimo.com>",
   "license": "MIT",
   "dependencies": {
@@ -16,8 +19,8 @@
     "react-atomic-organism": "*"
   },
   "devDependencies": {
-    "react": "^16.x",
-    "react-dom": "^16.x",
+    "react": "^18.x",
+    "react-dom": "^18.x",
     "react-virtualized": "*",
     "reshow-app": "*"
   },
@@ -34,5 +37,10 @@
     "build": "npm run clean && npm run build:cjs && npm run build:es",
     "prepublish": "npm run build"
   },
-  "files": ["build", "list.js", "package.json", "README.md"]
+  "files": [
+    "build",
+    "list.js",
+    "package.json",
+    "README.md"
+  ]
 }
