--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
   "name": "pmvc_react_admin",
-  "version": "0.3.3",
+  "version": "0.4.0",
   "description": "pmvc admin theme",
-  "main": "./build/cjs/src/index.js",
-  "module": "./build/es/src/index.js",
   "repository": "pmvc-theme/pmvc_react_admin",
   "keywords": [
     "react",
@@ -24,23 +22,40 @@
     "react-virtualized": "*",
     "reshow-app": "*"
   },
+  "exports": {
+    "./list": {
+      "require": "./build/cjs/src/list.js",
+      "import": "./build/es/src/list.mjs"
+    },
+    ".": {
+      "require": "./build/cjs/src/index.js",
+      "import": "./build/es/src/index.mjs"
+    }
+  },
+  "main": "./build/cjs/src/index.js",
+  "module": "./build/es/src/index.js",
   "scripts": {
+    "update-compile-sh": "yo reshow:compile-sh",
     "webpack": "webpack",
     "start": "ws",
-    "clean": "find ./build ./assets -name '*.*' | xargs rm -rf",
-    "build:cjs:src": "BABEL_ENV=cjs babel src -d build/cjs/src",
-    "build:cjs:ui": "BABEL_ENV=cjs babel ui -d build/cjs/ui",
+    "format": "prettier-eslint --write 'src/**/*.js' 'ui/**/*.js*'",
+    "clean:webpack": "find ./assets -name '*.*' | xargs rm -rf && rm -rf workbox-*.js",
+    "clean": "find ./build -name '*.*' | xargs rm -rf",
+    "build:cjs:src": "BABEL_ENV=cjs babel src -d build/cjs/src --ignore /**/__tests__",
+    "build:cjs:ui": "BABEL_ENV=cjs babel ui -d build/cjs/ui --ignore /**/__tests__",
     "build:cjs": "npm run build:cjs:src && npm run build:cjs:ui",
-    "build:es:src": "BABEL_ENV=es babel src -d build/es/src",
-    "build:es:ui": "BABEL_ENV=es babel ui -d build/es/ui",
+    "build:es:src": "BABEL_ENV=es babel src -d build/es/src --out-file-extension .mjs",
+    "build:es:ui": "BABEL_ENV=es babel ui -d build/es/ui --out-file-extension .mjs",
     "build:es": "npm run build:es:src && npm run build:es:ui",
     "build": "npm run clean && npm run build:cjs && npm run build:es",
-    "prepublish": "npm run build"
+    "mochaFor": "mocha -r global-jsdom/register",
+    "mocha": "npm run mochaFor -- 'build/es/**/__tests__/*.mjs'",
+    "test": "npm run build && npm run mocha",
+    "prepublishOnly": "npm run test"
   },
   "files": [
     "build",
     "laze.html",
-    "list.js",
     "package.json",
     "README.md"
   ]
