--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
+  "version": "0.5.0",
   "name": "pmvc_react_admin",
-  "version": "0.4.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/pmvc-theme/pmvc_react_admin"
+  },
   "description": "pmvc admin theme",
-  "repository": "pmvc-theme/pmvc_react_admin",
   "keywords": [
     "react",
     "reactjs"
@@ -14,7 +17,8 @@
     "organism-react-popup": "*",
     "pmvc_react_list": "*",
     "react-atomic-molecule": "*",
-    "react-atomic-organism": "*"
+    "react-atomic-organism": "*",
+    "ricon": "*"
   },
   "devDependencies": {
     "react": "^18.x",
@@ -33,7 +37,7 @@
     }
   },
   "main": "./build/cjs/src/index.js",
-  "module": "./build/es/src/index.js",
+  "module": "./build/es/src/index.mjs",
   "scripts": {
     "update-compile-sh": "yo reshow:compile-sh",
     "webpack": "webpack",
@@ -41,19 +45,18 @@
     "format": "prettier-eslint --write 'src/**/*.js' 'ui/**/*.js*'",
     "clean:webpack": "find ./assets -name '*.*' | xargs rm -rf && rm -rf workbox-*.js",
     "clean": "find ./build -name '*.*' | xargs rm -rf",
-    "build:cjs:src": "BABEL_ENV=cjs babel src -d build/cjs/src --ignore /**/__tests__",
-    "build:cjs:ui": "BABEL_ENV=cjs babel ui -d build/cjs/ui --ignore /**/__tests__",
-    "build:cjs": "npm run build:cjs:src && npm run build:cjs:ui",
-    "build:es:src": "BABEL_ENV=es babel src -d build/es/src --out-file-extension .mjs",
-    "build:es:ui": "BABEL_ENV=es babel ui -d build/es/ui --out-file-extension .mjs",
-    "build:es": "npm run build:es:src && npm run build:es:ui",
-    "build": "npm run clean && npm run build:cjs && npm run build:es",
+    "build:cjs": "BABEL_ENV=cjs babel src -d build/cjs/src --ignore /**/__tests__",
+    "build:es": "BABEL_ENV=es babel src -d build/es/src --out-file-extension .mjs",
+    "build:type": "npx -p typescript tsc src/index.js src/**/*.js src/ui/**/*.jsx --jsx react-jsx --declaration --allowJs --emitDeclarationOnly --skipLibCheck --declarationDir types",
+    "build": "npm run clean && npm run build:cjs && npm run build:es && npm run build:type",
     "mochaFor": "mocha -r global-jsdom/register",
     "mocha": "npm run mochaFor -- 'build/es/**/__tests__/*.mjs'",
     "test": "npm run build && npm run mocha",
     "prepublishOnly": "npm run test"
   },
+  "types": "./types/index.d.ts",
   "files": [
+    "types",
     "build",
     "laze.html",
     "package.json",
